# Polygonization-Project

./: .gitignore  CMakeLists.txt  main.cpp
1stAssignment/src/: main.cpp
1stAssignment/src/edge_selection/: CMakeLists.txt  edge_selection.cpp
1stAssignment/src/min_max_area/: try_maximizing_area.cpp  try_maximizing_area.hpp  try_minimizing_area.cpp  try_minimizing_area.hpp
1stAssignment/src/parsing_input/: parsing_input.hpp
1stAssignment/src/polygonization_algorithms/: polygonization_convex_hull.cpp  polygonization_incremental.cpp
1stAssignment/src/write_results/: write_results.hpp
2ndAssignment/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  local_search.cpp  local_search.hpp  main.cpp  optimal_polygon
2ndAssignment/src/calculate_convex_hull/: CMakeLists.txt  Makefile  cmake_install.cmake
2ndAssignment/src/parsing_input/: Makefile  cmake_install.cmake  parsing_input.cpp  parsing_input.hpp
2ndAssignment/src/polygon_optimization_algorithms/: local_search.cpp  simulated_annealing.cpp
2ndAssignment/src/polygonization_algorithms/: CMakeLists.txt  Makefile  (+3 more)
3rdAssignment/src/: CMakeLists.txt  main.cpp
polygonization_algorithms/: CMakeLists.txt  polygonization_convex_hull.cpp  polygonization_convex_hull.hpp  polygonization_incremental.cpp  polygonization_incremental.hpp
src/calculate_convex_hull/: calculate_convex_hull.cpp  calculate_convex_hull.hpp
src/edge_selection/: edge_selection.hpp
src/min_max_area/: CMakeLists.txt
src/parsing_input/: parsing_input.cpp
src/write_results/: CMakeLists.txt  write_results.cpp
(+19 files in other folders)
